<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pop_window_rec"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/editBuildingButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="E"
        android:textSize="15sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/infoButton"
        />

    <Button
        android:id="@+id/infoButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:text="i"
        android:textSize="15sp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:textAllCaps="false"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/editBuildingButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/upgradeButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:text="U"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/infoButton"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>