<?xml version="1.0" encoding="utf-8"?>
<com.example.zhanyuan.finalapp.views.SwipeMenuView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_menu"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/white">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/item_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_click">

        <ImageView
            android:id="@+id/item_detail"
...
