...
    android:layout_height="75dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/layout_data"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:gravity="center"
...
